syntax = "proto3";

package profile;
option java_package = "dev.psyconnect.grpc.consultation_profile";
service ProfileService {
  rpc CheckProfileExists (ProfileRequest) returns (ProfileResponse);
}

message ProfileRequest {
  string profile_id = 1;
}

message ProfileResponse {
  bool exists = 1;
}